fix overflow x problem on mobile
https://stackoverflow.com/questions/24193272/overflow-xhidden-on-mobile-device-not-working

--- a/src/css/imports/_reset.css
+++ b/src/css/imports/_reset.css
@@ -15,6 +15,7 @@
 
 html {
   -webkit-tap-highlight-color: transparent;
+  overflow-x: hidden;
 }
 
 a {
